Checkpoint. Split detect_trenches into three parts, working on period-finding for trench centroiding now.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171125 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171125 Prototyping.ipynb
@@ -315,23 +315,24 @@
     "\n",
     "def label_binary_image(bin_img):\n",
     "    X, fit = cluster_binary_image(bin_img)\n",
-    "    label_img = np.zeros_like(bin_img)\n",
+    "    label_img = np.zeros_like(bin_img, dtype=np.int8)  # TODO: fixing dtype\n",
     "    for i in range(len(fit.labels_)):\n",
     "        label_img[X[i, 0], X[i, 1]] = fit.labels_[i] + 1\n",
     "    return label_img\n",
     "\n",
     "\n",
     "def drop_rare_labels(labels):\n",
-    "    total = fit.labels_.sum()\n",
+    "    counter = Counter(labels)\n",
+    "    total = sum(counter)\n",
     "    good_labels = []\n",
-    "    for label, count in enumerate(fit.labels_):\n",
+    "    for label, count in counter.iteritems():\n",
     "        print(count / total)\n",
     "        if count / total > 0.01:\n",
     "            good_labels.append(label)\n",
     "    return good_labels\n",
     "\n",
     "\n",
-    "def detect_trenches(bin_img):\n",
+    "def detect_rotation(bin_img):\n",
     "    h, theta, d = skimage.transform.hough_line(bin_img)\n",
     "    abs_diff_h = np.diff(h.astype(np.int32), axis=1).var(axis=0)\n",
     "    theta_idx = abs_diff_h.argmax()\n",
@@ -347,7 +348,7 @@
     "    peak_idxs = peakutils.indexes(d_profile, thres=0.4, min_dist=5)\n",
     "    peaks = d2[peak_idxs]\n",
     "    spacing = scipy.stats.mode(np.diff(peaks)).mode[0]\n",
-    "    return angle2, peaks\n",
+    "    return np.pi / 2 - angle2, peaks\n",
     "\n",
     "\n",
     "def get_rough_spacing(dists):\n",
@@ -418,7 +419,7 @@
     "            bidirectional=False,\n",
     "        )\n",
     "        for (x0, x1), (y0, y1) in zip(line_array1, line_array2):\n",
-    "            yield x1, y1\n",
+    "            yield x0, x1, y1\n",
     "        return\n",
     "    if start is None:\n",
     "        start = 0\n",
@@ -440,12 +441,198 @@
     "            yield y0, y1\n",
     "\n",
     "\n",
-    "def point_linspace_fine(anchor0, anchor1, spacing, offset):\n",
-    "    for s in np.linspace(0, 1, N)[1:-1]:\n",
-    "        anchor = (1 - s) * anchor0 + s * anchor1\n",
-    "        yield anchor\n",
+    "def get_anchors(theta, x_lim, y_lim):\n",
+    "    x_min = np.array([x_lim[0], y_lim[0]])\n",
+    "    x_max = np.array([x_lim[1], y_lim[1]])\n",
+    "    x0 = x_min + (x_max - x_min) / 2\n",
+    "    anchor0 = edge_point(x0, theta, x_lim, y_lim)\n",
+    "    anchor1 = edge_point(x0, theta + np.pi, x_lim, y_lim)\n",
+    "    return anchor0, anchor1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def detect_trench_region(bin_img, theta):\n",
+    "    x_min = y_min = 0\n",
+    "    x_max, y_max = bin_img.shape\n",
+    "    x_lim = (x_min, x_max)\n",
+    "    y_lim = (y_min, y_max)\n",
+    "    anchor0, anchor1 = get_anchors(theta, x_lim, y_lim)\n",
+    "    cross_sections = []\n",
+    "    anchors = list(point_linspace(anchor0, anchor1, 40))[3:-3]  # TODO: parameterize\n",
+    "    lines = list(\n",
+    "        line_array(anchors, np.pi / 2 + theta, x_lim, y_lim, bidirectional=True)\n",
+    "    )\n",
+    "    for x0, x1, x2 in lines:\n",
+    "        xs, ys = coords_along(x1, x2)\n",
+    "        cross_sections.append(bin_img[ys, xs])\n",
+    "    cross_section_vars = np.array([cs.var() for cs in cross_sections])\n",
+    "    idx = cross_section_vars.argmax()\n",
+    "    return anchors[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = skimage.transform.rotate(f1, 15, cval=0)\n",
+    "img_thresh = img > skimage.filters.threshold_otsu(img)\n",
+    "img_labels = label_binary_image(img_thresh)\n",
+    "theta, dists = detect_rotation(img_labels == 1)\n",
+    "# spacing = get_rough_spacing(dists)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def detect_trenches(img, bin_img, theta):\n",
+    "    t0 = detect_trench_region(bin_img, theta)\n",
+    "    trench_anchors = detect_trench_anchors(img, t0, theta)\n",
+    "    trench_points = detect_trench_ends(img, trench_anchors, theta)\n",
+    "    return trench_anchors  # points\n",
     "\n",
     "\n",
+    "def detect_trench_anchors(img, t0, theta):\n",
+    "    x_min = y_min = 0\n",
+    "    x_max, y_max = img.shape\n",
+    "    x_lim = (x_min, x_max)\n",
+    "    y_lim = (y_min, y_max)\n",
+    "    ####\n",
+    "    x1 = edge_point(t0, theta - np.pi / 2, x_lim, y_lim)\n",
+    "    x2 = edge_point(t0, theta + np.pi / 2, x_lim, y_lim)\n",
+    "    xs, ys = coords_along(x1, x2)\n",
+    "    profile = img[ys, xs]\n",
+    "    idxs = peakutils.indexes(profile, thres=0.1, min_dist=5)\n",
+    "    plt.figure(figsize=(8, 8))\n",
+    "    plt.plot(profile)\n",
+    "    plt.scatter(idxs, profile[idxs], c=\"r\")\n",
+    "    return profile\n",
+    "    # pos = peakutils.interpolate(profile, indexes=idxs)\n",
+    "    ####\n",
+    "    # anchor0, anchor1 = get_anchors(theta, x_lim, y_lim)\n",
+    "    # cross_sections = []\n",
+    "    # anchors = list(point_linspace(anchor0, anchor1, 40))[3:-3]\n",
+    "    # lines = list(line_array(anchors, np.pi/2+theta, x_lim, y_lim, bidirectional=True))\n",
+    "\n",
+    "\n",
+    "def detect_trench_ends(img, anchors, theta):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "a = detect_trenches(img, img_labels == 1, theta)\n",
+    "# plt.imshow(img)\n",
+    "# for x0, x1 in trench_points:\n",
+    "#    line = np.vstack((x1, x2)).T\n",
+    "#    plt.plot(*line, color='w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idxs = peakutils.indexes(a, thres=0.1, min_dist=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "peakutils.interpolate?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs = peakutils.interpolate(np.arange(len(a)), a, ind=idxs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idxs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(np.diff(xs), bins=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.diff(xs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.diff(idxs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.abs(np.fft.fft(a))[-100:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 12))\n",
+    "for trench_profile in a:\n",
+    "    plt.plot(trench_profile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def refine_trenches(img, theta, spacing):\n",
     "    x_min = y_min = 0\n",
     "    x_max, y_max = img.shape\n",
@@ -463,16 +650,7 @@
     "        return s\n",
     "\n",
     "    spacings = np.linspace(0.8 * spacing, 1.2 * spacing, 20)\n",
-    "    offsets = np.linspace(0, 1.2 * spacing, 20)\n",
-    "\n",
-    "\n",
-    "def get_anchors(theta, x_lim, y_lim):\n",
-    "    x_min = np.array([x_lim[0], y_lim[0]])\n",
-    "    x_max = np.array([x_lim[1], y_lim[1]])\n",
-    "    x0 = x_min + (x_max - x_min) / 2\n",
-    "    anchor0 = edge_point(x0, theta, x_lim, y_lim)\n",
-    "    anchor1 = edge_point(x0, theta + np.pi, x_lim, y_lim)\n",
-    "    return anchor0, anchor1"
+    "    offsets = np.linspace(0, 1.2 * spacing, 20)"
    ]
   },
   {
@@ -481,36 +659,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# x0 = np.array([1024,1024])\n",
-    "# x0 = np.array([524,1024])\n",
-    "x0 = np.array([500, 124])\n",
-    "plt.figure(figsize=(12, 12))\n",
-    "plt.gca().add_artist(plt.Circle(x0, 10, color=\"g\", zorder=2))\n",
-    "for i, theta in enumerate(np.linspace(0, 2 * np.pi, 50)):\n",
-    "    # for i, theta in enumerate(np.linspace(3/2*np.pi, 4/2*np.pi, 50)):\n",
-    "    # for i, theta in enumerate([0, np.pi/4-.01, np.pi/4+.01]):\n",
-    "    x1 = edge_point(x0, theta, x_lim, y_lim)\n",
-    "    # print('>>', theta*180/np.pi, x1)\n",
-    "    line = np.vstack((x0, x1)).T\n",
-    "    plt.plot(*line, color=\"gray\")\n",
-    "    plt.gca().add_artist(plt.Circle(x1, 10, color=\"r\", zorder=2))\n",
-    "    # plt.gca().text(x1[0], x1[1], 'i:{}'.format(i), fontsize=15)\n",
-    "    # plt.annotate(str(i), xy=tuple(x1), textcoords='data')\n",
-    "plt.xlim(x_lim)\n",
-    "plt.ylim(y_lim)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = skimage.transform.rotate(f1, 15, cval=0)\n",
-    "img_thresh = img > skimage.filters.threshold_otsu(img)\n",
-    "img_labels = label_binary_image(img_thresh)\n",
-    "theta, dists = detect_trenches(img_labels == 1)\n",
-    "spacing = get_rough_spacing(dists)\n",
     "##########\n",
     "# anchors\n",
     "x_min = y_min = 0\n",
