--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171127 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171127 Prototyping.ipynb
@@ -597,121 +597,7 @@
     "    return top_points, bottom_points\n",
     "\n",
     "\n",
-    "a = detect_trenches(img, img_labels == 1, theta)\n",
-    "# plt.imshow(img)\n",
-    "# for x0, x1 in trench_points:\n",
-    "#    line = np.vstack((x1, x2)).T\n",
-    "#    plt.plot(*line, color='w')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = np.sum(stack_jagged(a[0]), axis=0)\n",
-    "c = np.cumsum(b)\n",
-    "c /= c[-1]\n",
-    "end = np.where(c > 0.95)[0][0]\n",
-    "plt.figure(figsize=(8, 8))\n",
-    "plt.plot(b)\n",
-    "plt.axvline(end, c=\"r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.where(c > 0.95)[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = np.cumsum(b)\n",
-    "c /= c[-1]\n",
-    "plt.figure(figsize=(8, 8))\n",
-    "plt.plot(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.sum(a[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def refine_trenches(img, theta, spacing):\n",
-    "    x_min = y_min = 0\n",
-    "    x_max, y_max = img.shape\n",
-    "    x_lim = (x_min, x_max)\n",
-    "    y_lim = (y_min, y_max)\n",
-    "    anchor0, anchor1 = get_anchors(theta, x_lim, y_lim)\n",
-    "\n",
-    "    def objective(spacing_, offset):\n",
-    "        s = 0\n",
-    "        for x0, x1 in line_array(\n",
-    "            point_linspace_fine(anchor0, anchor1, spacing_, offset), theta, x_lim, y_lim\n",
-    "        ):\n",
-    "            xs, ys = coords_along(x0, x1)\n",
-    "            s += img[ys, xs].sum()\n",
-    "        return s\n",
-    "\n",
-    "    spacings = np.linspace(0.8 * spacing, 1.2 * spacing, 20)\n",
-    "    offsets = np.linspace(0, 1.2 * spacing, 20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##########\n",
-    "# anchors\n",
-    "x_min = y_min = 0\n",
-    "x_max, y_max = img.shape\n",
-    "x_lim = (x_min, x_max)\n",
-    "y_lim = (y_min, y_max)\n",
-    "anchor0, anchor1 = get_anchors(np.pi / 2 - theta, x_lim, y_lim)\n",
-    "plt.figure(figsize=(12, 12))\n",
-    "plt.imshow(img)\n",
-    "plt.gca().add_artist(plt.Circle(anchor0, 50, color=\"g\"))\n",
-    "plt.gca().add_artist(plt.Circle(anchor1, 50, color=\"gray\"))\n",
-    "trench_profiles = []\n",
-    "# lines = line_array(point_linspace(anchor0, anchor1, int((anchor1[0] - anchor0[0])//spacing)), theta, x_lim, y_lim, start=500, stop=700)\n",
-    "lines = line_array(\n",
-    "    list(point_linspace(anchor0, anchor1, 40))[5:-5],\n",
-    "    -theta,\n",
-    "    x_lim,\n",
-    "    y_lim,\n",
-    "    bidirectional=False,\n",
-    ")\n",
-    "for x0, x1 in lines:\n",
-    "    print(x0, x1)\n",
-    "    xs, ys = coords_along(x0, x1)\n",
-    "    trench_profiles.append(img[ys, xs])\n",
-    "    line = np.vstack((x0, x1)).T\n",
-    "    plt.plot(*line, color=\"w\")\n",
-    "    plt.gca().add_artist(plt.Circle(x0, 10, color=\"r\", zorder=2))\n",
-    "    plt.gca().add_artist(plt.Circle(x1, 10, color=\"r\", zorder=2))\n",
-    "plt.figure(figsize=(12, 12))\n",
-    "for trench_profile in trench_profiles:\n",
-    "    plt.plot(trench_profile)"
+    "trench_points = detect_trenches(img, img_labels == 1, theta)"
    ]
   },
   {
@@ -727,6 +613,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
