--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171127 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171127 Prototyping.ipynb
@@ -38,6 +38,7 @@
     "import peakutils\n",
     "import scipy.stats\n",
     "import scipy.interpolate\n",
+    "from holoborodko_diff import holo_diff\n",
     "import functools\n",
     "from itertools import zip_longest\n",
     "from collections import Counter\n",
@@ -76,18 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frames = nd2reader.ND2Reader(\n",
-    "    \"/home/jqs1/scratch/fidelity/171018/20171018_TrxnError_ID.nd2\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frames_z.shape"
+    "# frames = nd2reader.ND2Reader('/home/jqs1/scratch/fidelity/171018/20171018_TrxnError_ID.nd2')"
    ]
   },
   {
@@ -207,88 +197,6 @@
     "# hv.DynamicMap(composite_image, kdims=['t', 'v', 'channel_enabled']).select(t=0,v=0,channel_enabled=np.array([True,False,False,False,False]))\n",
     "image_viewer = hv.DynamicMap(composite_image, streams=[frame, display_settings])\n",
     "regrid(image_viewer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a_stack = frames_z[0, :, :, 300:500, :1000]\n",
-    "a = a_stack[0, 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "f0 = frames_z[0, 0, :].max(axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f1 = f0 - np.percentile(f0, 0.5, axis=1)[:, np.newaxis]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f1_b = skimage.filters.gaussian(f1, 3)\n",
-    "f1_v = skimage.filters.sobel_v(f1_b)\n",
-    "f1_v2 = skimage.filters.sobel_v(f1_v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def hessian_eigenvalues(img):\n",
-    "    I = skimage.filters.gaussian(img, 1.5)\n",
-    "    I_x = skimage.filters.sobel_h(I)\n",
-    "    I_y = skimage.filters.sobel_v(I)\n",
-    "    I_xx = skimage.filters.sobel_h(I_x)\n",
-    "    I_xy = skimage.filters.sobel_v(I_x)\n",
-    "    I_yx = skimage.filters.sobel_h(I_y)\n",
-    "    I_yy = skimage.filters.sobel_v(I_y)\n",
-    "    kappa_1 = (I_xx + I_yy) / 2\n",
-    "    kappa_2 = (np.sqrt((I_xx + I_yy) ** 2 - 4 * (I_xx * I_yy - I_xy * I_yx))) / 2\n",
-    "    k1 = kappa_1 + kappa_2\n",
-    "    k2 = kappa_1 - kappa_2\n",
-    "    k1[np.isnan(k1)] = 0\n",
-    "    k2[np.isnan(k2)] = 0\n",
-    "    return k1, k2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f1_k1, f1_k2 = hessian_eigenvalues(f1_b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(f1_k1)"
    ]
   },
   {
@@ -487,29 +395,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = skimage.transform.rotate(f1, 15, cval=0)\n",
-    "img_thresh = img > skimage.filters.threshold_otsu(img)\n",
-    "img_labels = label_binary_image(img_thresh)\n",
-    "theta, dists = detect_rotation(img_labels == 1)\n",
-    "# spacing = get_rough_spacing(dists)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# FROM: https://stackoverflow.com/questions/23815327/numpy-one-liner-for-combining-unequal-length-np-array-to-a-matrixor-2d-array\n",
     "def stack_jagged(arys, fill=0):\n",
     "    return np.array(list(zip_longest(*arys, fillvalue=fill))).T\n",
-    "\n",
-    "\n",
-    "def detect_trenches(img, bin_img, theta):\n",
-    "    t0 = detect_trench_region(bin_img, theta)\n",
-    "    trench_anchors = detect_trench_anchors(img, t0, theta)\n",
-    "    trench_points = detect_trench_ends(img, bin_img, trench_anchors, theta)\n",
-    "    return trench_points\n",
     "\n",
     "\n",
     "def detect_periodic_peaks(signal):\n",
@@ -522,10 +410,18 @@
     "    periods = np.linspace(period_min, period_max, num_periods)\n",
     "    # std = ((dxs + periods[:,np.newaxis]/2) % periods[:,np.newaxis]).std(axis=1)\n",
     "    std = scipy.stats.iqr(((xs) % periods[:, np.newaxis]), axis=1) / periods\n",
-    "    period = periods[std.argmin()]\n",
+    "    period_idx = std.argmin()\n",
+    "    period = periods[period_idx]\n",
+    "    plt.figure()\n",
+    "    plt.plot(std)\n",
+    "    plt.scatter([period_idx], [std[period_idx]], c=\"r\")\n",
     "    periods2 = np.linspace(period * 0.98, period * 1.02, num_periods)\n",
     "    std2 = scipy.stats.iqr(((xs) % periods2[:, np.newaxis]), axis=1) / periods2\n",
-    "    period2 = periods2[std2.argmin()]\n",
+    "    period_idx2 = std2.argmin()\n",
+    "    period2 = periods2[period_idx2]\n",
+    "    plt.figure()\n",
+    "    plt.plot(std2)\n",
+    "    plt.scatter([period_idx2], [std2[period_idx2]], c=\"r\")\n",
     "    offsets = np.linspace(0, period2, num_periods)\n",
     "    offset_idxs = (\n",
     "        np.arange(0, len(signal) - period2, period2) + offsets[:, np.newaxis]\n",
@@ -533,9 +429,9 @@
     "    objective = signal[offset_idxs].sum(axis=1)\n",
     "    offset_idx = objective.argmax()\n",
     "    offset = offsets[offset_idx]\n",
-    "    # plt.figure()\n",
-    "    # plt.plot(objective)\n",
-    "    # plt.scatter([offset_idx], [objective[offset_idx]], c='r')\n",
+    "    plt.figure()\n",
+    "    plt.plot(objective)\n",
+    "    plt.scatter([offset_idx], [objective[offset_idx]], c=\"r\")\n",
     "    return period2, offset\n",
     "\n",
     "\n",
@@ -547,9 +443,9 @@
     "    profile = img[ys, xs]\n",
     "    period, offset = detect_periodic_peaks(profile)\n",
     "    idxs = np.arange(offset, len(profile), period).astype(np.int_)\n",
-    "    # plt.figure(figsize=(16,8))\n",
-    "    # plt.plot(profile)\n",
-    "    # plt.scatter(idxs, profile[idxs], c='r')\n",
+    "    plt.figure(figsize=(16, 8))\n",
+    "    plt.plot(profile)\n",
+    "    plt.scatter(idxs, profile[idxs], c=\"r\")\n",
     "    return np.vstack((xs[idxs], ys[idxs])).T\n",
     "\n",
     "\n",
@@ -564,16 +460,20 @@
     "        xss.append(xs)\n",
     "        yss.append(ys)\n",
     "        trench_profiles.append(img[ys, xs])\n",
-    "    # plt.figure(figsize=(8,8))\n",
-    "    # for trench_profile in trench_profiles:\n",
-    "    #    plt.plot(trench_profile)\n",
+    "    plt.figure(figsize=(8, 8))\n",
+    "    for trench_profile in trench_profiles:\n",
+    "        plt.plot(trench_profile)\n",
     "    stacked_profile = np.percentile(stack_jagged(trench_profiles), 80, axis=0)\n",
-    "    cum_profile = np.cumsum(stacked_profile)\n",
-    "    cum_profile /= cum_profile[-1]\n",
-    "    end = np.where(cum_profile > 0.95)[0][0]\n",
-    "    # plt.figure(figsize=(8,8))\n",
-    "    # plt.plot(stacked_profile)\n",
-    "    # plt.axvline(end, c='r')\n",
+    "    # cum_profile = np.cumsum(stacked_profile)\n",
+    "    # cum_profile /= cum_profile[-1]\n",
+    "    # end = np.where(cum_profile > 0.8)[0][0]\n",
+    "    stacked_profile_diff = holo_diff(1, stacked_profile)\n",
+    "    end = stacked_profile_diff.argmin()\n",
+    "    plt.figure(figsize=(8, 8))\n",
+    "    plt.plot(stacked_profile)\n",
+    "    ax2 = plt.gca().twinx()\n",
+    "    ax2.plot(stacked_profile_diff, color=\"g\")\n",
+    "    plt.axvline(end, c=\"r\")\n",
     "    end_points = []\n",
     "    for xs, ys in zip(xss, yss):\n",
     "        idx = end\n",
@@ -597,7 +497,18 @@
     "    return top_points, bottom_points\n",
     "\n",
     "\n",
-    "trench_points = detect_trenches(img, img_labels == 1, theta)"
+    "def detect_trenches(img, bin_img, theta):\n",
+    "    t0 = detect_trench_region(bin_img, theta)\n",
+    "    trench_anchors = detect_trench_anchors(img, t0, theta)\n",
+    "    trench_points = detect_trench_ends(img, bin_img, trench_anchors, theta)\n",
+    "    return trench_points"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Segmentation"
    ]
   },
   {
@@ -605,7 +516,160 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def hessian_eigenvalues(img):\n",
+    "    I = skimage.filters.gaussian(img, 1.5)\n",
+    "    I_x = skimage.filters.sobel_h(I)\n",
+    "    I_y = skimage.filters.sobel_v(I)\n",
+    "    I_xx = skimage.filters.sobel_h(I_x)\n",
+    "    I_xy = skimage.filters.sobel_v(I_x)\n",
+    "    I_yx = skimage.filters.sobel_h(I_y)\n",
+    "    I_yy = skimage.filters.sobel_v(I_y)\n",
+    "    kappa_1 = (I_xx + I_yy) / 2\n",
+    "    kappa_2 = (np.sqrt((I_xx + I_yy) ** 2 - 4 * (I_xx * I_yy - I_xy * I_yx))) / 2\n",
+    "    k1 = kappa_1 + kappa_2\n",
+    "    k2 = kappa_1 - kappa_2\n",
+    "    k1[np.isnan(k1)] = 0\n",
+    "    k2[np.isnan(k2)] = 0\n",
+    "    return k1, k2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_image_series_trenches(img_series):\n",
+    "    img = img_series.max(axis=0)\n",
+    "    # TODO: need rotation-invariant detrending\n",
+    "    img = img - np.percentile(img, 3, axis=1)[:, np.newaxis]\n",
+    "    img_thresh = img > skimage.filters.threshold_otsu(img)\n",
+    "    img_labels = label_binary_image(img_thresh)\n",
+    "    plt.figure(figsize=(8, 8))\n",
+    "    plt.imshow(img_labels)\n",
+    "    theta, dists = detect_rotation(img_labels == 1)\n",
+    "    trench_points = detect_trenches(img, img_labels == 1, theta)\n",
+    "    return trench_points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frames_z.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "frame_series = frames_z[0, 0, :, :, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "trench_points = get_image_series_trenches(frame_series)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_kymograph(img_series, x0, x1):\n",
+    "    num_timepoints = img_series.shape[0]\n",
+    "    xs, ys = coords_along(x0, x1)\n",
+    "    kymo = np.zeros((len(xs), num_timepoints))\n",
+    "    for t in range(num_timepoints):\n",
+    "        kymo[:, t] = img_series[t, ys, xs]\n",
+    "    return kymo\n",
+    "\n",
+    "\n",
+    "def get_image_series_segmentation(img_series, x0, x1):\n",
+    "    pass  # list of trenches, for each trench, a list of cell masks\n",
+    "\n",
+    "\n",
+    "def map_over_segmentation(img_series, cell_seg, func):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "trench_idx = 12\n",
+    "kymo = extract_kymograph(\n",
+    "    f_series, trench_points[0][trench_idx], trench_points[1][trench_idx]\n",
+    ")\n",
+    "plt.figure()\n",
+    "plt.imshow(kymo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1_b = skimage.filters.gaussian(f1, 3)\n",
+    "f1_k1, f1_k2 = hessian_eigenvalues(f1_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# img = skimage.transform.rotate(f1, 15, cval=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(f1_k1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.imshow(kymo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_series = frames_z[0, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 8))\n",
+    "plt.imshow(f_series[0])"
+   ]
   }
  ],
  "metadata": {
