Upped peakutils threshold from 0.1 to 0.2, immediately fixed trench finding problem with sparsely-populated trenches.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171128 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171128 Prototyping.ipynb
@@ -421,7 +421,7 @@
     "\n",
     "\n",
     "def detect_periodic_peaks(signal):\n",
-    "    idxs = peakutils.indexes(signal, thres=0.1, min_dist=5)\n",
+    "    idxs = peakutils.indexes(signal, thres=0.2, min_dist=5)\n",
     "    xs = peakutils.interpolate(np.arange(len(signal)), signal, ind=idxs)\n",
     "    plt.figure(figsize=(16, 8))\n",
     "    plt.plot()\n",
@@ -531,7 +531,7 @@
     "    return trench_points\n",
     "\n",
     "\n",
-    "get_image_series_trenches(frame_series)"
+    "get_image_series_trenches(frame_series, 2)"
    ]
   },
   {
@@ -579,12 +579,12 @@
     "    return img, img_labels\n",
     "\n",
     "\n",
-    "def get_image_series_trenches(img_series):\n",
+    "def get_image_series_trenches(img_series, label):\n",
     "    img, img_labels = _label_for_trenches(img_series)\n",
     "    plt.figure(figsize=(8, 8))\n",
     "    plt.imshow(img_labels)\n",
-    "    theta, dists = detect_rotation(img_labels == 1)\n",
-    "    trench_points = detect_trenches(img, img_labels == 1, theta)\n",
+    "    theta, dists = detect_rotation(img_labels == label)\n",
+    "    trench_points = detect_trenches(img, img_labels == label, theta)\n",
     "    return trench_points"
    ]
   },
