Got kymograph scrubber working! Need to decide if x_max, y_max should be inclusive.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171129 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171129 Prototyping.ipynb
@@ -264,6 +264,9 @@
     "def get_img_limits(img):\n",
     "    x_min = y_min = 0\n",
     "    x_max, y_max = img.shape\n",
+    "    # TODO: what convention should we use, should max be inclusive??\n",
+    "    # x_max = img.shape[0] - 1\n",
+    "    # y_max = img.shape[1] - 1\n",
     "    x_lim = (x_min, x_max)\n",
     "    y_lim = (y_min, y_max)\n",
     "    return x_lim, y_lim\n",
@@ -632,32 +635,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12, 12))\n",
-    "plt.imshow(frame_series[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(12, 12))\n",
-    "plt.imshow(frame_series_k1[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def extract_kymograph(img_series, x0, x1):\n",
     "    num_timepoints = img_series.shape[0]\n",
     "    xs, ys = coords_along(x0, x1)\n",
     "    kymo = np.zeros((len(xs), num_timepoints))\n",
     "    for t in range(num_timepoints):\n",
-    "        kymo[:, t] = img_series[t, ys, xs]\n",
+    "        kymo[:, t] = img_series[t, ys, xs][::-1]\n",
     "    return kymo\n",
     "\n",
     "\n",
@@ -699,7 +682,8 @@
     "    frame_series_k1, trench_points[0][trench_idx], trench_points[1][trench_idx]\n",
     ")\n",
     "plt.figure(figsize=(16, 8))\n",
-    "plt.imshow(kymo, aspect=0.2)"
+    "# plt.imshow(kymo, aspect=.2)\n",
+    "plt.imshow(kymo[:, 20:40], aspect=0.1)"
    ]
   },
   {
@@ -708,57 +692,142 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f1_b = skimage.filters.gaussian(f1, 3)\n",
-    "f1_k1, f1_k2 = hessian_eigenvalues(f1_b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# img = skimage.transform.rotate(f1, 15, cval=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(f1_k1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure()\n",
-    "plt.imshow(kymo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f_series = frames_z[0, 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "def bounding_box(points):\n",
+    "    bottom_left_x = min(point[0] for point in points)\n",
+    "    bottom_left_y = min(point[1] for point in points)\n",
+    "    top_right_x = max(point[0] for point in points)\n",
+    "    top_right_y = max(point[1] for point in points)\n",
+    "    return (\n",
+    "        np.array([bottom_left_x, bottom_left_y]),\n",
+    "        np.array([top_right_x, top_right_y]),\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def crop_point(x, x_lim, y_lim):\n",
+    "    x = x.copy()\n",
+    "    x_min, x_max = x_lim\n",
+    "    y_min, y_max = y_lim\n",
+    "    if x[0] < x_min:\n",
+    "        x[0] = x_min\n",
+    "    elif x[0] >= x_max:\n",
+    "        x[0] = x_max - 1\n",
+    "    if x[1] < y_min:\n",
+    "        x[1] = y_min\n",
+    "    elif x[1] >= y_max:\n",
+    "        x[1] = y_max - 1\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "def get_trench_thumbnail(img, trench_points, trench_idx):\n",
+    "    # trench_points[0][trench_idx], trench_points[1][trench_idx]\n",
+    "    num_trenches = min(len(trench_points[0]), len(trench_points[1]))\n",
+    "    if not 0 <= trench_idx < num_trenches:\n",
+    "        raise ValueError(\"trench index out of bounds\")\n",
+    "    x_lim, y_lim = get_img_limits(img)\n",
+    "    points = [trench_points[i][trench_idx] for i in (0, 1)]\n",
+    "    if trench_idx == 0:\n",
+    "        x0_prev = 2 * trench_points[0][0] - trench_points[0][1]\n",
+    "        x1_prev = 2 * trench_points[1][0] - trench_points[1][1]\n",
+    "        x0_prev = crop_point(x0_prev, x_lim, y_lim)\n",
+    "        x1_prev = crop_point(x1_prev, x_lim, y_lim)\n",
+    "        points += [x0_prev, x1_prev]\n",
+    "    else:\n",
+    "        points += [trench_points[i][trench_idx - 1] for i in (0, 1)]\n",
+    "    if trench_idx + 1 == num_trenches:\n",
+    "        x0_next = 2 * trench_points[0][-1] - trench_points[0][-2]\n",
+    "        x1_next = 2 * trench_points[1][-1] - trench_points[1][-2]\n",
+    "        x0_next = crop_point(x0_next, x_lim, y_lim)\n",
+    "        x1_next = crop_point(x1_next, x_lim, y_lim)\n",
+    "        points += [x0_next, x1_next]\n",
+    "    else:\n",
+    "        points += [trench_points[i][trench_idx + 1] for i in (0, 1)]\n",
+    "    y0, y1 = bounding_box(points)\n",
+    "    return img[y0[1] : y1[1], y0[0] : y1[0]]\n",
+    "\n",
+    "\n",
     "plt.figure(figsize=(8, 8))\n",
-    "plt.imshow(f_series[0])"
+    "plt.imshow(get_trench_thumbnail(frame_series_k1[30], trench_points, 0))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%opts Image (cmap='viridis')\n",
+    "def scrubber(t):\n",
+    "    if t is None:\n",
+    "        t = 0\n",
+    "    t = int(t)\n",
+    "    return hv.VLine(t + 0.5)(\n",
+    "        style={\"color\": \"white\", \"alpha\": 0.3, \"line_width\": 2}\n",
+    "    ) * hv.Text(t + kymo.shape[1] / 20, kymo.shape[0] / 20, \"t={:}\".format(t))(\n",
+    "        style={\"color\": \"white\", \"text_alpha\": 0.8}\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def trench_thumbnail(t):\n",
+    "    if t is None:\n",
+    "        t = 0\n",
+    "    t = int(t)\n",
+    "    print(t)\n",
+    "    img = get_trench_thumbnail(frame_series_k1[t], trench_points, trench_idx)\n",
+    "    return hv.Image(img, bounds=(0, 0, img.shape[1], img.shape[0]))\n",
+    "\n",
+    "\n",
+    "pointerx = hv.streams.PointerX().rename(x=\"t\")\n",
+    "\n",
+    "trench_idx = 15\n",
+    "kymo = extract_kymograph(\n",
+    "    frame_series_k1, trench_points[0][trench_idx], trench_points[1][trench_idx]\n",
+    ")\n",
+    "(\n",
+    "    hv.Image(kymo, bounds=(0, 0, kymo.shape[1], kymo.shape[0])).opts(\n",
+    "        plot={\"width\": 700, \"height\": 300}\n",
+    "    )\n",
+    "    * hv.DynamicMap(scrubber, streams=[pointerx])\n",
+    "    + hv.DynamicMap(trench_thumbnail, streams=[pointerx])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%opts Image (cmap='viridis')\n",
+    "def scrubber(t):\n",
+    "    if t is None:\n",
+    "        t = 0\n",
+    "    t = int(t)\n",
+    "    return hv.VLine(t + 0.5)(\n",
+    "        style={\"color\": \"white\", \"alpha\": 0.3, \"line_width\": 2}\n",
+    "    ) * hv.Text(t + kymo.shape[1] / 20, kymo.shape[0] / 20, \"t={:}\".format(t))(\n",
+    "        style={\"color\": \"white\", \"text_alpha\": 0.8}\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "trench_thumb = get_trench_thumbnail(frame_series_k1[30], trench_points, trench_idx)\n",
+    "\n",
+    "(\n",
+    "    hv.Image(kymo, bounds=(0, 0, kymo.shape[1], kymo.shape[0])).opts(\n",
+    "        plot={\"width\": 700, \"height\": 300}\n",
+    "    )\n",
+    "    * hv.DynamicMap(scrubber, streams=[hv.streams.PointerX().rename(x=\"t\")])\n",
+    "    + hv.Image(\n",
+    "        trench_thumb, bounds=(0, 0, trench_thumb.shape[1], trench_thumb.shape[0])\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
