Now have two tandem kymograph displays, showing the Hessian eigenvalue and the original image. For some reason the scrubber only works on one of them.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171129 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171129 Prototyping.ipynb
@@ -40,6 +40,7 @@
     "import scipy.interpolate\n",
     "from holoborodko_diff import holo_diff\n",
     "import functools\n",
+    "from functools import partial\n",
     "from itertools import zip_longest\n",
     "from collections import Counter, defaultdict\n",
     "from bokeh.models import WheelZoomTool\n",
@@ -677,21 +678,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_idx = 15\n",
-    "kymo = extract_kymograph(\n",
-    "    frame_series_k1, trench_points[0][trench_idx], trench_points[1][trench_idx]\n",
-    ")\n",
-    "plt.figure(figsize=(16, 8))\n",
-    "# plt.imshow(kymo, aspect=.2)\n",
-    "plt.imshow(kymo[:, 20:40], aspect=0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def bounding_box(points):\n",
     "    bottom_left_x = min(point[0] for point in points)\n",
     "    bottom_left_y = min(point[1] for point in points)\n",
@@ -742,11 +728,7 @@
     "    else:\n",
     "        points += [trench_points[i][trench_idx + 1] for i in (0, 1)]\n",
     "    y0, y1 = bounding_box(points)\n",
-    "    return img[y0[1] : y1[1], y0[0] : y1[0]]\n",
-    "\n",
-    "\n",
-    "plt.figure(figsize=(8, 8))\n",
-    "plt.imshow(get_trench_thumbnail(frame_series_k1[30], trench_points, 0))"
+    "    return img[y0[1] : y1[1], y0[0] : y1[0]]"
    ]
   },
   {
@@ -767,12 +749,11 @@
     "    )\n",
     "\n",
     "\n",
-    "def trench_thumbnail(t):\n",
+    "def trench_thumbnail(img_series, t):\n",
     "    if t is None:\n",
     "        t = 0\n",
     "    t = int(t)\n",
-    "    print(t)\n",
-    "    img = get_trench_thumbnail(frame_series_k1[t], trench_points, trench_idx)\n",
+    "    img = get_trench_thumbnail(img_series[t], trench_points, trench_idx)\n",
     "    return hv.Image(img, bounds=(0, 0, img.shape[1], img.shape[0]))\n",
     "\n",
     "\n",
@@ -787,7 +768,7 @@
     "        plot={\"width\": 700, \"height\": 300}\n",
     "    )\n",
     "    * hv.DynamicMap(scrubber, streams=[pointerx])\n",
-    "    + hv.DynamicMap(trench_thumbnail, streams=[pointerx])\n",
+    "    + hv.DynamicMap(partial(trench_thumbnail, frame_series_k1), streams=[pointerx])\n",
     ")"
    ]
   },
@@ -798,27 +779,15 @@
    "outputs": [],
    "source": [
     "%%opts Image (cmap='viridis')\n",
-    "def scrubber(t):\n",
-    "    if t is None:\n",
-    "        t = 0\n",
-    "    t = int(t)\n",
-    "    return hv.VLine(t + 0.5)(\n",
-    "        style={\"color\": \"white\", \"alpha\": 0.3, \"line_width\": 2}\n",
-    "    ) * hv.Text(t + kymo.shape[1] / 20, kymo.shape[0] / 20, \"t={:}\".format(t))(\n",
-    "        style={\"color\": \"white\", \"text_alpha\": 0.8}\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "trench_thumb = get_trench_thumbnail(frame_series_k1[30], trench_points, trench_idx)\n",
-    "\n",
+    "kymo = extract_kymograph(\n",
+    "    frame_series, trench_points[0][trench_idx], trench_points[1][trench_idx]\n",
+    ")\n",
     "(\n",
     "    hv.Image(kymo, bounds=(0, 0, kymo.shape[1], kymo.shape[0])).opts(\n",
     "        plot={\"width\": 700, \"height\": 300}\n",
     "    )\n",
-    "    * hv.DynamicMap(scrubber, streams=[hv.streams.PointerX().rename(x=\"t\")])\n",
-    "    + hv.Image(\n",
-    "        trench_thumb, bounds=(0, 0, trench_thumb.shape[1], trench_thumb.shape[0])\n",
-    "    )\n",
+    "    * hv.DynamicMap(scrubber, streams=[pointerx])\n",
+    "    + hv.DynamicMap(partial(trench_thumbnail, frame_series), streams=[pointerx])\n",
     ")"
    ]
   },
