Kymograph scrubbers are now synchronized.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171129 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171129 Prototyping.ipynb
@@ -650,26 +650,7 @@
     "\n",
     "\n",
     "def map_over_segmentation(img_series, cell_seg, func):\n",
-    "    pass\n",
-    "\n",
-    "\n",
-    "trench_idx = 15\n",
-    "kymo = extract_kymograph(\n",
-    "    frame_series, trench_points[0][trench_idx], trench_points[1][trench_idx]\n",
-    ")\n",
-    "plt.figure(figsize=(16, 8))\n",
-    "plt.imshow(kymo, aspect=0.2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1) if we haven't moved, prior is we are less likely to move\n",
-    "#    (aka prior is velocity of cell boundary at a given position is fixed)\n",
-    "# 2) use high-confidence ids to inform expected velocity of low-confidence ids"
+    "    pass"
    ]
   },
   {
@@ -690,6 +671,7 @@
     "\n",
     "\n",
     "def crop_point(x, x_lim, y_lim):\n",
+    "    # TODO: use np.clip\n",
     "    x = x.copy()\n",
     "    x_min, x_max = x_lim\n",
     "    y_min, y_max = y_lim\n",
@@ -754,20 +736,24 @@
     "        t = 0\n",
     "    t = int(t)\n",
     "    img = get_trench_thumbnail(img_series[t], trench_points, trench_idx)\n",
-    "    return hv.Image(img, bounds=(0, 0, img.shape[1], img.shape[0]))\n",
+    "    print(img.shape)\n",
+    "    return hv.Image(\n",
+    "        img, bounds=(0, 0, img.shape[1], img.shape[0]), kdims=[\"x2\", \"y\"]\n",
+    "    ).opts(plot={\"width\": 150})\n",
     "\n",
     "\n",
-    "pointerx = hv.streams.PointerX().rename(x=\"t\")\n",
+    "pointerx = hv.streams.PointerX(x=0).rename(x=\"t\")\n",
     "\n",
     "trench_idx = 15\n",
     "kymo = extract_kymograph(\n",
     "    frame_series_k1, trench_points[0][trench_idx], trench_points[1][trench_idx]\n",
     ")\n",
+    "kymo_img = hv.Image(kymo, bounds=(0, 0, kymo.shape[1], kymo.shape[0])).opts(\n",
+    "    plot={\"width\": 700, \"height\": 300}\n",
+    ")\n",
+    "scrubber_line = hv.DynamicMap(scrubber, streams=[pointerx])\n",
     "(\n",
-    "    hv.Image(kymo, bounds=(0, 0, kymo.shape[1], kymo.shape[0])).opts(\n",
-    "        plot={\"width\": 700, \"height\": 300}\n",
-    "    )\n",
-    "    * hv.DynamicMap(scrubber, streams=[pointerx])\n",
+    "    kymo_img * scrubber_line\n",
     "    + hv.DynamicMap(partial(trench_thumbnail, frame_series_k1), streams=[pointerx])\n",
     ")"
    ]
@@ -782,12 +768,15 @@
     "kymo = extract_kymograph(\n",
     "    frame_series, trench_points[0][trench_idx], trench_points[1][trench_idx]\n",
     ")\n",
+    "kymo_img = hv.Image(kymo, bounds=(0, 0, kymo.shape[1], kymo.shape[0])).opts(\n",
+    "    plot={\"width\": 700, \"height\": 300}\n",
+    ")\n",
+    "pointerx2.source = kymo_img\n",
     "(\n",
-    "    hv.Image(kymo, bounds=(0, 0, kymo.shape[1], kymo.shape[0])).opts(\n",
-    "        plot={\"width\": 700, \"height\": 300}\n",
+    "    kymo_img * hv.DynamicMap(scrubber, streams=[pointerx1, pointerx2])\n",
+    "    + hv.DynamicMap(\n",
+    "        partial(trench_thumbnail, frame_series), streams=[pointerx1, pointerx2]\n",
     "    )\n",
-    "    * hv.DynamicMap(scrubber, streams=[pointerx])\n",
-    "    + hv.DynamicMap(partial(trench_thumbnail, frame_series), streams=[pointerx])\n",
     ")"
    ]
   },
