Added horizontal line to kymograph scrubber. Realized that linked streams are because scrubber_line is shared across plots, scrubber_line is set as source of pointerx/y because it is the first DynamicMap to subscribe to them.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171129 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171129 Prototyping.ipynb
@@ -719,43 +719,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# use correct way to crop thumbnail (so axes are correct, can draw cross section lines using global coordinate system)\n",
+    "# draw cross-section lines on thumbnail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%opts Image (cmap='viridis')\n",
-    "def scrubber(t):\n",
-    "    if t is None:\n",
-    "        t = 0\n",
+    "def scrubber(t, y):\n",
     "    t = int(t)\n",
-    "    return hv.VLine(t + 0.5)(\n",
-    "        style={\"color\": \"white\", \"alpha\": 0.3, \"line_width\": 2}\n",
-    "    ) * hv.Text(t + kymo.shape[1] / 20, kymo.shape[0] / 20, \"t={:}\".format(t))(\n",
+    "    v_line = hv.VLine(t + 0.5)(style={\"color\": \"white\", \"alpha\": 0.3, \"line_width\": 2})\n",
+    "    t_label = hv.Text(t + kymo.shape[1] / 20, kymo.shape[0] / 20, \"t={:}\".format(t))(\n",
     "        style={\"color\": \"white\", \"text_alpha\": 0.8}\n",
     "    )\n",
+    "    h_line = hv.HLine(y)(style={\"color\": \"white\", \"alpha\": 0.3, \"line_width\": 2})\n",
+    "    return v_line * t_label * h_line\n",
+    "\n",
+    "\n",
+    "def cross_section(y):\n",
+    "    y = int(y)\n",
+    "    h_line = hv.HLine(y)(style={\"color\": \"white\", \"alpha\": 0.3, \"line_width\": 2})\n",
+    "    return h_line\n",
     "\n",
     "\n",
     "def trench_thumbnail(img_series, t):\n",
-    "    if t is None:\n",
-    "        t = 0\n",
     "    t = int(t)\n",
     "    img = get_trench_thumbnail(img_series[t], trench_points, trench_idx)\n",
-    "    print(img.shape)\n",
     "    return hv.Image(\n",
     "        img, bounds=(0, 0, img.shape[1], img.shape[0]), kdims=[\"x2\", \"y\"]\n",
     "    ).opts(plot={\"width\": 150})\n",
     "\n",
     "\n",
     "pointerx = hv.streams.PointerX(x=0).rename(x=\"t\")\n",
+    "pointery = hv.streams.PointerY(y=0)\n",
     "\n",
-    "trench_idx = 15\n",
-    "kymo = extract_kymograph(\n",
-    "    frame_series_k1, trench_points[0][trench_idx], trench_points[1][trench_idx]\n",
-    ")\n",
-    "kymo_img = hv.Image(kymo, bounds=(0, 0, kymo.shape[1], kymo.shape[0])).opts(\n",
-    "    plot={\"width\": 700, \"height\": 300}\n",
-    ")\n",
-    "scrubber_line = hv.DynamicMap(scrubber, streams=[pointerx])\n",
-    "(\n",
-    "    kymo_img * scrubber_line\n",
-    "    + hv.DynamicMap(partial(trench_thumbnail, frame_series_k1), streams=[pointerx])\n",
-    ")"
+    "\n",
+    "def kymo_widget(img_series, trench_idx, pointerx=None, pointery=None):\n",
+    "    if pointerx is None:\n",
+    "        pointerx = hv.streams.PointerX(x=0).rename(x=\"t\")\n",
+    "    if pointery is None:\n",
+    "        pointery = hv.streams.PointerY(y=0)\n",
+    "    kymo = extract_kymograph(\n",
+    "        img_series, trench_points[0][trench_idx], trench_points[1][trench_idx]\n",
+    "    )\n",
+    "    kymo_img = hv.Image(kymo, bounds=(0, 0, kymo.shape[1], kymo.shape[0])).opts(\n",
+    "        plot={\"width\": 700, \"height\": 300}\n",
+    "    )\n",
+    "    scrubber_line = hv.DynamicMap(scrubber, streams=[pointerx, pointery])\n",
+    "    cross_section_line = hv.DynamicMap(cross_section, streams=[pointery])\n",
+    "    trench_thumbnail_img = hv.DynamicMap(\n",
+    "        partial(trench_thumbnail, img_series), streams=[pointerx]\n",
+    "    )\n",
+    "    return kymo_img * scrubber_line + trench_thumbnail_img * cross_section_line\n",
+    "\n",
+    "\n",
+    "kymo_widget(frame_series_k1, 15, pointerx=pointerx, pointery=pointery)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%opts Image (cmap='viridis')\n",
+    "kymo_widget(frame_series, 15, pointerx=pointerx, pointery=pointery)"
    ]
   },
   {
@@ -771,12 +803,9 @@
     "kymo_img = hv.Image(kymo, bounds=(0, 0, kymo.shape[1], kymo.shape[0])).opts(\n",
     "    plot={\"width\": 700, \"height\": 300}\n",
     ")\n",
-    "pointerx2.source = kymo_img\n",
     "(\n",
-    "    kymo_img * hv.DynamicMap(scrubber, streams=[pointerx1, pointerx2])\n",
-    "    + hv.DynamicMap(\n",
-    "        partial(trench_thumbnail, frame_series), streams=[pointerx1, pointerx2]\n",
-    "    )\n",
+    "    kymo_img * scrubber_line\n",
+    "    + hv.DynamicMap(partial(trench_thumbnail, frame_series), streams=[pointerx])\n",
     ")"
    ]
   },
