Hacked together a sharpness graph stacked on top of kymograph scrubber. I needed to transpose the image because the invert_axes option wasn't working.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171209 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171209 Prototyping.ipynb
@@ -671,19 +671,7 @@
     "\n",
     "\n",
     "def crop_point(x, x_lim, y_lim):\n",
-    "    # TODO: use np.clip\n",
-    "    x = x.copy()\n",
-    "    x_min, x_max = x_lim\n",
-    "    y_min, y_max = y_lim\n",
-    "    if x[0] < x_min:\n",
-    "        x[0] = x_min\n",
-    "    elif x[0] >= x_max:\n",
-    "        x[0] = x_max - 1\n",
-    "    if x[1] < y_min:\n",
-    "        x[1] = y_min\n",
-    "    elif x[1] >= y_max:\n",
-    "        x[1] = y_max - 1\n",
-    "    return x\n",
+    "    return np.clip(x, *np.vstack([[x_lim], [y_lim]]).T)\n",
     "\n",
     "\n",
     "def get_trench_thumbnail(img, trench_points, trench_idx):\n",
@@ -729,6 +717,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "a = frames_z[0, 0, 0]\n",
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = frames_z[0, 0, 150]\n",
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_sharpness(img):\n",
+    "    # FROM: https://stackoverflow.com/questions/7765810/is-there-a-way-to-detect-if-an-image-is-blurry/7767755#7767755\n",
+    "    img_blurred = skimage.filters.gaussian(img, 1)\n",
+    "    img_lofg = skimage.filters.laplace(img_blurred)\n",
+    "    return np.percentile(img_lofg, 99.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "sharpness = np.array(\n",
+    "    [image_sharpness(img_series[i]) for i in range(img_series.shape[0])]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(sharpness)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Layout.cols?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.help(hv.Image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%opts Image (cmap='viridis')\n",
     "def scrubber(t, y):\n",
     "    t = int(t)\n",
@@ -742,15 +813,23 @@
     "\n",
     "def cross_section(y):\n",
     "    y = int(y)\n",
-    "    h_line = hv.HLine(y)(style={\"color\": \"white\", \"alpha\": 0.3, \"line_width\": 2})\n",
+    "    h_line = hv.VLine(y)(style={\"color\": \"white\", \"alpha\": 0.3, \"line_width\": 2})\n",
     "    return h_line\n",
+    "\n",
+    "\n",
+    "def sharpness_scrubber(t):\n",
+    "    t = int(t)\n",
+    "    v_line = hv.VLine(t + 0.5)(style={\"color\": \"black\", \"alpha\": 0.3, \"line_width\": 2})\n",
+    "    return v_line\n",
     "\n",
     "\n",
     "def trench_thumbnail(img_series, t):\n",
     "    t = int(t)\n",
     "    img = get_trench_thumbnail(img_series[t], trench_points, trench_idx)\n",
+    "    # TODO: don't know why calling hv.Image.opts(plot={'invert_axes': True}) doesn't work\n",
+    "    # also switched HLine to VLine in cross_section, above\n",
     "    return hv.Image(\n",
-    "        img, bounds=(0, 0, img.shape[1], img.shape[0]), kdims=[\"x2\", \"y\"]\n",
+    "        img.T, bounds=(0, 0, img.shape[0], img.shape[1]), kdims=[\"y\", \"x2\"]\n",
     "    ).opts(plot={\"width\": 150})\n",
     "\n",
     "\n",
@@ -769,8 +848,19 @@
     "cross_section_line = hv.DynamicMap(cross_section, streams=[pointery])\n",
     "trench_thumbnail_img = hv.DynamicMap(\n",
     "    partial(trench_thumbnail, img_series), streams=[pointerx]\n",
+    ")  # .opts(plot={'invert_axes': True})\n",
+    "# ((kymo_img * scrubber_line + hv.Curve(sharpness, kdims=['x'], vdims=['sharpness'])).cols(1) + trench_thumbnail_img * cross_section_line)\n",
+    "sharpness_plot = hv.Curve(sharpness, kdims=[\"x\"], vdims=[\"s\"]).opts(\n",
+    "    plot={\"width\": 700, \"height\": 100}\n",
     ")\n",
-    "(kymo_img * scrubber_line + trench_thumbnail_img * cross_section_line)"
+    "sharpness_scrubber = hv.DynamicMap(sharpness_scrubber, streams=[pointerx])\n",
+    "# (sharpness_plot + kymo_img * scrubber_line).cols(1) + trench_thumbnail_img * cross_section_line\n",
+    "# SEE: http://holoviews.org/reference/elements/bokeh/Distribution.html\n",
+    "(\n",
+    "    kymo_img * scrubber_line\n",
+    "    << (trench_thumbnail_img * cross_section_line)\n",
+    "    << (sharpness_plot * sharpness_scrubber)\n",
+    ")"
    ]
   },
   {
@@ -790,7 +880,29 @@
     "trench_thumbnail_img = hv.DynamicMap(\n",
     "    partial(trench_thumbnail, img_series), streams=[pointerx]\n",
     ")\n",
-    "(kymo_img * scrubber_line + trench_thumbnail_img * cross_section_line)"
+    "(\n",
+    "    kymo_img.opts(plot={\"invert_axes\": True}) * scrubber_line\n",
+    "    + trench_thumbnail_img * cross_section_line\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# handle out-of-bounds/negative t/x values\n",
+    "# focus quality score\n",
+    "# show focus quality as a bar above kymograph\n",
+    "# accurate horizontal line position on thumbnail\n",
+    "# draw cross-section line through thumbnail\n",
+    "# synchronize zoom/pan of multiple kymograph viewers\n",
+    "# 3-up thumbnail viewer with crosshairs/endpoint correspondences (links) synchronized with kymograph viewer\n",
+    "# clicking through a track advances 3-up by one frame\n",
+    "# if you press END it finishes track and rewinds to the first unfinished track\n",
+    "# automatic tracking: always identify bottom-most endpoint?\n",
+    "# can we work out all other correspondences from this? (look at t=14)"
    ]
   }
  ],
